# META-openENV

openENV-Meta/loan_approval_openenv/: Dockerfile  app.py  inference.py  pyproject.toml  requirements.txt
openENV-Meta/loan_approval_openenv/server/: app.py
