[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "loan-approval-openenv"
version = "0.1.0"
description = "AI Loan Approval and Risk Optimization OpenEnv Environment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gradio>=4.0",
    "numpy",
    "pandas",
    "pyyaml",
    "openai",
    "fastapi",
    "uvicorn",
    "pydantic",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"
